# tatu

./: CONTRIBUTING.rst  HACKING.rst  INSTALLATION.rst  README.md  README.rst  TRY_IT.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.rst  local-df.conf  local.conf  plugin.sh  settings  tatu_stack.sh
devstack_old/: README.md  local.conf  plugin.sh
doc/source/: architecture.rst  ca_domain.rst  conf.py  index.rst  jump_proxy.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/oslo-config-generator/: tatu.ini
etc/tatu/: api-paste.ini
files/: paste.ini  static-vendor-data.json  tatu.conf  tatu.service  user-cloud-config  user-cloud-config2
releasenotes/source/: conf.py  index.rst
scripts/: add-project-ca  cloud-config-to-vendor-data  configure_ssh.py  get-ca-keys  get-user-cert  get_user_cert.py  revoke-user-cert  srvssh  vendor-data-to-cloud-config
tatu/: castellano.py  config.py  dns.py  ks_utils.py  notifications.py  pat.py  sync_keystone.py  utils.py
tatu/api/: app.py  models.py
tatu/castellan/: config.py  tatu_key_manager.py  utils.py
tatu/db/: models.py  persistence.py
tatu/ftests/: test_api.py
tatu/tests/: test_app.py  test_tatu.py
