[metadata]
name = tatu
description-file =
    README.rst
license = Apache License, Version 2.0
summary = Management of SSH host/user certificates, plus bastions
author = Pino de Candia
author_email = pino.decandia@huawei.com
home-page = https://github.com/pinodeca/tatu
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 3 - Alpha
keywords = ssh certificate bastion

